CFL Table Alignment fixed

--- a/src/app/modules/itr-filing/itr-wizard/pages/schedule-cfl/schedule-cfl.component.scss
+++ b/src/app/modules/itr-filing/itr-wizard/pages/schedule-cfl/schedule-cfl.component.scss
@@ -14,6 +14,46 @@
   border-radius: 4px 4px 0px 0px;
 }
 
+.frameC {
+   padding: 0px 25px 0px 25px;
+}
+
+.table-responsive{
+  height:400px;
+  overflow: scroll;
+}
+
+.table th {
+  border: 1px solid #dfdfdf!important;
+}
+
+.table td {
+  border: 1px solid #dfdfdf!important;
+}
+
+.table :where(th, td) {
+  white-space: normal!important;
+}
+
+.mat-form-field {
+  width: 165px !important;  
+}
+
+mat-checkbox {
+  margin: 0 auto;
+  width: 20%;
+  display: block;
+}
+
+.midChck{
+  margin:0 auto;
+}
+
+.colrOut {
+    background-color: #f9f9f9!important;
+}
+
+
 .wrap-content {
   align-items: flex-start;
   display: flex;
